# agent-dashboard

./: .gitignore  Cargo.toml  README.md  bash.exe.stackdump
src/: app.rs  cli.rs  detail_ui.rs  lib.rs  main.rs  model.rs  send_keys.rs  session.rs  ui.rs  view_ui.rs
